k8s-do/network-of-terms-autocompletion-demo/network-of-terms-autocompletion-demo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-of-terms-autocompletion-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/autocomplete)$ $1/ redirect;
spec:
  ingressClassName: nginx
  rules:
    - host: demo.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /autocomplete(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: network-of-terms-autocompletion-demo
                port:
                  number: 80
